<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">雨霁的烟纸店</string>
    <string name="express_url">http://www.kuaidi100.com</string>
    <string name="im_customer">我是顾客</string>
    <string name="im_storekeeper">我是店主</string>
    <string name="goods_detail_title">商品详情</string>
    <string name="goods_name">名称</string>
    <string name="goods_describe">描述</string>
    <string name="goods_unit">单位</string>
    <string name="goods_cost">单价</string>
    <string name="goods_cost_average">平均单价</string>
    <string name="goods_price">售价</string>
    <string name="goods_stock">库存</string>
    <string name="goods_stock_sold">已售库存</string>
    <string name="goods_stock_total">累计库存</string>
    <string name="goods_cost_total">总成本</string>
    <string name="goods_income_total">总收入</string>
    <string name="goods_profit_total">利润</string>
    <string name="order_customer">顾客</string>
    <string name="order_time">时间</string>
    <string name="order_amount">金额</string>
    <string name="order_weight">重量</string>
    <string name="btn_stock">进货</string>
    <string name="price">售价：￥%s/%s</string>
    <string name="stock">库存：%s%s</string>
    <string name="money">￥%s</string>
    <string name="money_price">￥%s/%s</string>
    <string name="customer_name">姓名</string>
    <string name="customer_mobile">手机号</string>
    <string name="btn_order">订单</string>
    <string name="goods_title">商品详情</string>
    <string name="customer_title">顾客详情</string>
    <string name="btn_add">新增</string>
    <string name="delete">删除</string>
    <string name="btn_add_cart">加入购物车</string>
    <string name="weight">%s%s</string>
    <string name="btn_cart">购物车</string>
    <string name="btn_buy">购买</string>
    <string name="cart_goods">%s：%s，%s</string>
    <string name="cart_amount">总计：%s</string>
    <string name="btn_express">物流信息</string>
    <string name="btn_pay">去支付</string>
    <string name="btn_paid">已支付</string>
    <string name="btn_noshipped">未发货</string>
    <string name="btn_ship">去发货</string>
    <string name="status_shipped">已发货</string>
    <string name="btn_receipt">确认收货</string>
    <string name="status_unpay">未支付</string>
    <string name="status_completed">已完成</string>
    <string name="status_receipt">已收货</string>
    <string name="status_canceled">已取消</string>
    <string name="complete">完成</string>
    <string name="no_stock">【%s】库存不足</string>
    <string name="express_name">快递公司</string>
    <string name="express_no">快递单号</string>
    <string name="refresh_express">刷新快递信息</string>
    <string name="cm_tips">快递单号【%s】已复制到剪贴板。</string>
</resources>
